# react-native-ecr17-protocol

./: .gitignore  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  REVIEW.md  biome.json  package.json
.changeset/: clever-cloths-count.md  config.json  eleven-doodles-hear.md  publish-github-packages.md
.claude/rules/: rule-docmd-docs-sync.md  rule-readme-sync.md
.github/workflows/: android-build.yml  cpp-tests.yml  release.yml  ts-checks.yml
.zed/: settings.json
docs/: LESSON.md  standard ECR17 - supported by Nexi Group terminals.md
docs-site/: docmd.config.json  package-lock.json  package.json
docs-site/.docmd-search/: config.json
docs-site/assets/: custom.css
docs-site/docs/: configuration.md  index.md  installation.md  quickstart.md
docs-site/scripts/: check-build-output.mjs  check-no-raw-html.mjs  copy-search-index.mjs  prepare-search-config.mjs
example/: app.json  package.json  tsconfig.json
package/: .gitignore  CHANGELOG.md  Ecr17.podspec  README.md  nitro.json  package.json  react-native.config.js  tsconfig.ci.json  tsconfig.json
package/android/: CMakeLists.txt  build.gradle  gradle.properties
package/cpp/: Ecr17.cpp  Ecr17.hpp  HybridEcr17.cpp  HybridEcr17.hpp
package/cpp/tests/: CMakeLists.txt  PosixTcpTransport.hpp  test_flows.cpp  test_integration_terminal.cpp  test_lrc.cpp  test_packet_codec.cpp  test_protocol.cpp  test_protocol_commands.cpp  test_response.cpp  test_retry_policy.cpp  test_session.cpp
package/cpp/tests/stubs/: LrcMode.hpp
package/ios/: HybridEcr17Transport.swift
package/src/: index.ts
scripts/: sync-readme.mjs
(+67 files in other folders)
